# signal-protocol-chat

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
mongo-init/: init.js
src/: error.rs  main.rs
src/cli/: chat.rs  mod.rs
src/crypto/: hkdf.rs  keys.rs  mod.rs  xeddsa.rs
src/network/: mod.rs
src/protocol/: double_ratchet.rs  message.rs  mod.rs  x3dh.rs
src/storage/: mod.rs
